# checkers_server

./: .gitignore  CMakeLists.txt  README.md  connected_users.cpp  connected_users.h  database.cpp  database.h  db.sqlite  main.cpp  player.cpp  player.h  query.cpp  query.h  query_handler.cpp  query_handler.h  server.cpp  server.h  thread_pool.cpp  thread_pool.h  user.cpp  user.h  utility_functions.cpp  utility_functions.h
